# lecture-analyzer

./: Cargo.toml  my_lecture.pdf.txt
src/: analyze.rs  export.rs  main.rs  pdf.rs  util.rs
