[package]
name = "lecture-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
tempfile = "3.10.1"
which = "6.0.1"
printpdf = "0.8.2" # PDF writing library